@@ -1,3 +1,6 @@
+[B]Version 1.0.9[/B]
+- Fixed bug that doesn't allow to reproduce video correctly.
+
 [B]Version 1.0.8[/B]
 - Updated to the new neverwise library.
 
